--- a/minilibx/Makefile
+++ b/minilibx/Makefile
@@ -8,18 +8,16 @@ OBJ1=$(SRC:.c=.o)
 OBJ=$(OBJ1:.m=.o)
 CFLAGS+=-O2
 # add to match string put with X11 in size and position
-CFLAGS+= -DSTRINGPUTX11
-
-.SILENT:
+CFLAGS+= -DSTRINGPUTX11 -Wno-deprecated-declarations
 
 all: $(NOM)
 
 $(NOM):	$(OBJ)
-	ar -r $(NOM) $(OBJ)
-	ranlib $(NOM)
+	@ar -r $(NOM) $(OBJ)
+	@ranlib $(NOM)
 
 clean:
-	rm -f $(NOM) $(OBJ) *~
-	rm -f mlx_app
+	@rm -f $(NOM) $(OBJ) *~
+	@rm -f mlx_app
 
 re: clean all
